Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18182

Handle segfault in lctl net

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      Code branch:

       

      6c5408f61d64ee27ded51436c73aed22c750e140 (HEAD -> segfault_lclt_x, tag: v2_15_90, tag: 2.15.90, origin/master, origin/HEAD, master, LU-16976-lnet_ni) New tag 2.15.90
      LUSTRE_VERSION = 2.15.90_1_g4fefc0e
      
      # lctl net
      Segmentation fault (core dumped)

      Expected:

      It should dump usage message.

            arshad512 Arshad Hussain
            arshad512 Arshad Hussain
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: