LU-18182 lctl: Handle fault when issuing 'lctl net' cmd

'lctl net' command whithout arguments should dump
usage message and not fault.

After patch:
$ lctl net
configure LNET
usage: net [Network] <up|down> [-l]
  -l: Override existing, else it will create new

Before patch:
$ lctl net
Segmentation fault (core dumped)

Test-Parameters: trivial testlist=sanity-lnet
Signed-off-by: Arshad Hussain <arshad.hussain@aeoncomputing.com>
Change-Id: I7c885032d8b5493bcadc35062047a3e0a5a1e48f
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/56205
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Chris Horn <chris.horn@hpe.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Oleg Drokin <green@whamcloud.com>